# juce-pitch

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_RULES.md  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
dsp/: PitchShifterDSP.cpp  PitchShifterDSP.h
gui/: LookAndFeel.cpp  LookAndFeel.h  MainEditor.cpp  MainEditor.h  RotarySlider.cpp  RotarySlider.h
scripts/: bootstrap.ps1
